fix: include type field in graph nodes for bug filter highlighting
Bug bn-ad0e: The GUI bugs filter was not highlighting bug nodes in the
graph because buildGraphData() was not copying the 'type' field from
tasks to node objects. Added type field to both existing and new nodes.

Also fixed clippy warnings about large enum variants by boxing
TaskShowResult and BugShowResult in their response enums.

--- a/src/gui/index.html
+++ b/src/gui/index.html
@@ -2123,6 +2123,7 @@
                         short_name: task.short_name,
                         status: task.status,
                         priority: task.priority,
+                        type: task.type || 'task',
                         x: existing.x,
                         y: existing.y,
                         vx: 0,
@@ -2141,6 +2142,7 @@
                         short_name: task.short_name,
                         status: task.status,
                         priority: task.priority,
+                        type: task.type || 'task',
                         x: Math.cos(angle) * radius,
                         y: Math.sin(angle) * radius,
                         vx: 0,
