fix(gui): update canvas size on window resize
The canvas drawing buffer size was only set once during initialization.
When the window was resized, the CSS dimensions changed but the internal
canvas.width/height properties remained stale, causing stretched/distorted
rendering.

Now checks and updates canvas dimensions in each animation frame, fixing
the resize issue.

Fixes: bn-7b41

--- a/src/gui/index.html
+++ b/src/gui/index.html
@@ -2365,6 +2365,14 @@
             const ctx = canvas.getContext('2d');
             const { nodes, edges, physics } = state.graph;
 
+            // Update canvas size if window was resized
+            const displayWidth = canvas.clientWidth;
+            const displayHeight = canvas.clientHeight;
+            if (canvas.width !== displayWidth || canvas.height !== displayHeight) {
+                canvas.width = displayWidth;
+                canvas.height = displayHeight;
+            }
+
             // Update camera pan animation if active
             updatePanAnimation();
 
