--- a/src/gui/index.html
+++ b/src/gui/index.html
@@ -399,6 +399,54 @@
             transform: translateX(14px);
         }
 
+        /* Hide completed toggle */
+        .hide-completed-toggle {
+            display: flex;
+            align-items: center;
+            gap: 0.4rem;
+            margin-right: 0.5rem;
+            padding-right: 0.75rem;
+            border-right: 1px solid var(--border-color);
+        }
+
+        .hide-completed-label {
+            font-size: 0.75rem;
+            color: var(--text-secondary);
+            white-space: nowrap;
+        }
+
+        .hide-completed-switch {
+            width: 32px;
+            height: 18px;
+            border-radius: 9px;
+            background: var(--text-tertiary);
+            cursor: pointer;
+            position: relative;
+            transition: background 0.2s ease;
+            border: none;
+            padding: 0;
+        }
+
+        .hide-completed-switch::after {
+            content: '';
+            position: absolute;
+            top: 2px;
+            left: 2px;
+            width: 14px;
+            height: 14px;
+            border-radius: 50%;
+            background: white;
+            transition: transform 0.2s ease;
+        }
+
+        .hide-completed-switch.active {
+            background: #22c55e;
+        }
+
+        .hide-completed-switch.active::after {
+            transform: translateX(14px);
+        }
+
         /* Edge filter controls */
         .edge-filters {
             position: absolute;
@@ -986,6 +1034,10 @@
                     <div class="edge-tooltip-date" id="edge-tooltip-date"></div>
                 </div>
                 <div class="zoom-controls">
+                    <div class="hide-completed-toggle">
+                        <span class="hide-completed-label">Hide completed</span>
+                        <button class="hide-completed-switch" id="hide-completed-switch" title="Hide completed nodes (except in active chains)"></button>
+                    </div>
                     <div class="auto-follow-toggle">
                         <span class="auto-follow-label">Follow active</span>
                         <button class="auto-follow-switch" id="auto-follow-switch" title="Follow active task"></button>
@@ -1866,6 +1918,21 @@
         function updateAutoFollowDisplay() {
             const switchEl = document.getElementById('auto-follow-switch');
             if (state.graph.autoFollow) {
+                switchEl.classList.add('active');
+            } else {
+                switchEl.classList.remove('active');
+            }
+        }
+
+        // Hide completed toggle
+        document.getElementById('hide-completed-switch').addEventListener('click', () => {
+            state.graph.hideCompleted = !state.graph.hideCompleted;
+            updateHideCompletedDisplay();
+        });
+
+        function updateHideCompletedDisplay() {
+            const switchEl = document.getElementById('hide-completed-switch');
+            if (state.graph.hideCompleted) {
                 switchEl.classList.add('active');
             } else {
                 switchEl.classList.remove('active');
@@ -3092,6 +3159,7 @@
         initializeEdgeFilters();
         initializeStatFilters();
         updateAutoFollowDisplay();
+        updateHideCompletedDisplay();
         connectWebSocket();
     </script>
 </body>
