fix(gui): correct property names in active chain detection
Fixed critical bug where isInActiveChain() was accessing edge.source and
edge.target instead of edge.from and edge.to. This caused the adjacency
list to be built incorrectly, resulting in ALL completed nodes being
hidden regardless of whether they were in active chains.

The bug prevented completed nodes like bn-be58 from being shown even when
they were connected to active tasks (bn-3c31, bn-e7c7) through child_of
and depends_on edges.

With this fix, the BFS traversal now correctly finds connections between
completed and active nodes, preserving context for work in progress.

Fixes bn-f6a5

--- a/src/gui/index.html
+++ b/src/gui/index.html
@@ -2434,15 +2434,15 @@
             // Build adjacency list for traversal (both directions)
             const adjacency = new Map();
             edges.forEach(edge => {
-                if (!adjacency.has(edge.source)) {
-                    adjacency.set(edge.source, []);
+                if (!adjacency.has(edge.from)) {
+                    adjacency.set(edge.from, []);
                 }
-                if (!adjacency.has(edge.target)) {
-                    adjacency.set(edge.target, []);
+                if (!adjacency.has(edge.to)) {
+                    adjacency.set(edge.to, []);
                 }
                 // Add bidirectional edges for traversal
-                adjacency.get(edge.source).push(edge.target);
-                adjacency.get(edge.target).push(edge.source);
+                adjacency.get(edge.from).push(edge.to);
+                adjacency.get(edge.to).push(edge.from);
             });
 
             // BFS to check if we can reach any active node from this node
